--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ h2{
   color:#E8A87C;
   font-size: 50px;
 }
+
+h3{
+  text-align: center;
+  font-size: 30;
+}
 .Centre {
   display: block;
   margin-left: auto;
